notes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-memos
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: app
          image: neosmemo/memos:0.8.1
          ports:
            - containerPort: 5230
              name: http
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              cpu: 30m
              memory: 200Mi
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 6
          volumeMounts:
            - mountPath: /var/opt/memos
              name: data
      volumes:
        - name: data
          hostPath:
            path: /mnt/data1/k8s/memos
