notes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-app-memos
spec:
  ports:
    - protocol: TCP
      port: 5230
      name: http
